// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HTML Component render "<h1>Test Title</h1>" 1`] = `
<Memo(HTML)
  html="<h1>Test Title</h1>"
>
  <div>
    <h1
      key="0"
    >
      Test Title
    </h1>
  </div>
</Memo(HTML)>
`;

exports[`HTML Component render "<script src="http://example.com/script.js"></script>" 1`] = `
<Memo(HTML)
  html="<script src=\\"http://example.com/script.js\\"></script>"
>
  <div>
    &lt;script src="http://example.com/script.js"&gt;&lt;/script&gt;
  </div>
</Memo(HTML)>
`;

exports[`HTML Component render "<style>*{color: red;}</style>" 1`] = `
<Memo(HTML)
  html="<style>*{color: red;}</style>"
>
  <div>
    &lt;style&gt;*{color: red;}&lt;/style&gt;
  </div>
</Memo(HTML)>
`;
